# azure-openai-limits

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
src/azure_openai_limits/: __init__.py  __main__.py  api.py  data.py  models.json  types.py
tests/: test_azure_openai_limits.py
