[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-openai-limits"
version = "0.1.2"
description = "Static token limits for Azure OpenAI models (context/output), with CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Taylor Nelson", email = "your-email@example.com" }]
maintainers = [{ name = "Taylor Nelson", email = "your-email@example.com" }]
keywords = ["azure", "openai", "token-limits", "gpt", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/taylorn-ai/azure-openai-limits"
Repository = "https://github.com/taylorn-ai/azure-openai-limits"
Documentation = "https://github.com/taylorn-ai/azure-openai-limits#readme"
Issues = "https://github.com/taylorn-ai/azure-openai-limits/issues"
Changelog = "https://github.com/taylorn-ai/azure-openai-limits/releases"

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
    "mypy==1.17.1",
    "pytest==8.4.1",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]

[project.scripts]
azure-openai-limits = "azure_openai_limits:_main"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pre-commit>=4.3.0",
    "twine>=6.1.0",
]
